tests/baselines/reference/generatorTypeCheck31.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts(2,11): error TS2322: Type 'IterableIterator<(x: any) => any>' is not assignable to type '() => Iterable<(x: string) => number>'.
  Type 'IterableIterator<(x: any) => any>' provides no match for the signature '(): Iterable<(x: string) => number>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts (1 errors) ====
    function* g2(): Iterator<() => Iterable<(x: string) => number>> {
        yield function* () {
              ~~~~~~~~~~~~~~
            yield x => x.length;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        } ()
    ~~~~~~~~
!!! error TS2322: Type '{|IterableIterator|0|}<(x: any) => any>' is not assignable to type '() => {|Iterable|1|}<(x: string) => number>'.
!!! error TS2322:   Type 'IterableIterator<(x: any) => any>' provides no match for the signature '(): Iterable<(x: string) => number>'.
!!! annotated symbol 0 /.ts/lib.es2015.iterable.d.ts:46:11
!!! annotated symbol 1 /.ts/lib.es2015.iterable.d.ts:42:11
    }